<resources>
    <string name="app_name">Nmedia</string>
    <string name="hello_world">Hello NMedia!</string>
    <string name="autorNetology">Netology. University of Internet Professions of the Future.</string>
    <string name="date21may">21 may on 18:36</string>
    <string name="txtNetology">Hello, this is the new Netology! Once upon a time, Netology began with intensive courses in online marketing. Then came courses in design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the strength that makes them want more, aim higher, run faster. Our mission is to help take the path of growth and start a chain of change - http://netology.gy/fyb</string>
    <string name="textsize2">10</string>
    <string name="menu_remove">Remove</string>
    <string name="new_post">Add post</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content not be empty!</string>
    <string name="now">now</string>
    <string name="menu_edit">Update</string>
    <string name="text_on_edit">Edit Message</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_save">Save</string>
    <string name="play">Play</string>
</resources>