<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/marg_16dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="@dimen/marg_16dp"
        android:text="@string/autorNetology"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/img_menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marg_16dp"
        android:text="@string/date21may"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/imgSize"
        android:layout_height="@dimen/imgSize"
        android:layout_marginStart="@dimen/marg_16dp"
        android:layout_marginTop="@dimen/marg_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/img_menu"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/ic_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marg_16dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,img_menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marg_16dp"
        android:layout_marginTop="@dimen/marg_16dp"
        android:layout_marginEnd="@dimen/marg_16dp"
        android:autoLink="web"
        android:textSize="@dimen/sizeTxtNetogy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/barrier_up"
        app:layout_constraintTop_toBottomOf="@+id/barrier_up" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marg_16dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"

        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        app:icon="@drawable/ic_like_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/image_share"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:icon="@drawable/baseline_share_24"
        app:layout_constraintBottom_toBottomOf="@+id/like"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/like" />


    <ImageView
        android:id="@+id/image_eye"
        android:layout_width="@dimen/img2Dimension"
        android:layout_height="@dimen/img2Dimension"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_eye"
        app:layout_constraintEnd_toStartOf="@+id/text_eye"
        app:layout_constraintTop_toTopOf="@+id/text_eye"
        app:srcCompat="@drawable/baseline_remove_red_eye_24" />

    <TextView
        android:id="@+id/text_eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marg_16dp"
        android:text="1000"
        android:textSize="@dimen/sizeTxtNetogy"
        app:layout_constraintBottom_toBottomOf="@+id/like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/like" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="buttonPlay,imageVideo" />

    <ImageView
        android:id="@+id/imageVideo"
        android:layout_width="70dp"
        android:layout_height="71dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:srcCompat="@android:drawable/ic_media_play" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageVideo" />


</androidx.constraintlayout.widget.ConstraintLayout>